--- a/source/src/main/resources/application.properties
+++ b/source/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=mauri1435
 spring.datasource.password=TCMZ1723
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size=10
